==> Community-PIO-CH32V/framework-wch-noneos-sdk/Peripheral/ch32v205/src/ch32v205_gpio.c <==
#include "ch32v205_gpio.h"
#include "ch32v205_rcc.h"
#define ECR_PORTPINCONFIG_MASK    ((uint16_t)0xFF80)
#define LSB_MASK                  ((uint16_t)0xFFFF)
#define DBGAFR_POSITION_MASK      ((uint32_t)0x000F0000)
#define DBGAFR_SWJCFG_MASK        ((uint32_t)0xF8FFFFFF)
#define DBGAFR_LOCATION_MASK      ((uint32_t)0x00200000)
#define DBGAFR_NUMBITS_MASK       ((uint32_t)0x00100000)
#define REMAP_MASK                ((uint32_t)0xC0000000)
#define REMAP_NUM_MASK            ((uint32_t)0x38000000)

void GPIO_DeInit(GPIO_TypeDef *GPIOx)
{
    if(GPIOx == GPIOA)
    {
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOA, ENABLE);
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOA, DISABLE);
    }
    else if(GPIOx == GPIOB)
    {
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOB, ENABLE);
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOB, DISABLE);
    }
    else if(GPIOx == GPIOC)
    {
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOC, ENABLE);
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOC, DISABLE);
    }
    else if(GPIOx == GPIOD)
    {
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOD, ENABLE);
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOD, DISABLE);
    }
    else if(GPIOx == GPIOE)
    {
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOE, ENABLE);
        RCC_PB2PeriphResetCmd(RCC_PB2Periph_GPIOE, DISABLE);
    }
}

void GPIO_Init(GPIO_TypeDef *GPIOx, GPIO_InitTypeDef *GPIO_InitStruct)
{
    uint32_t currentmode = 0x00, currentpin = 0x00, pinpos = 0x00, pos = 0x00;
    uint32_t tmpreg = 0x00, pinmask = 0x00;

    currentmode = ((uint32_t)GPIO_InitStruct->GPIO_Mode) & ((uint32_t)0x0F);

    if((((uint32_t)GPIO_InitStruct->GPIO_Mode) & ((uint32_t)0x10)) != 0x00)
    {
        currentmode |= (uint32_t)GPIO_InitStruct->GPIO_Speed;
    }

    if(((uint32_t)GPIO_InitStruct->GPIO_Pin & ((uint32_t)0x00FF)) != 0x00)
    {
        tmpreg = GPIOx->CFGLR;

        for(pinpos = 0x00; pinpos < 0x08; pinpos++)
        {
            pos = ((uint32_t)0x01) << pinpos;
            currentpin = (GPIO_InitStruct->GPIO_Pin) & pos;

            if(currentpin == pos)
            {
                pos = pinpos << 2;
                pinmask = ((uint32_t)0x0F) << pos;
                tmpreg &= ~pinmask;
                tmpreg |= (currentmode << pos);

                if(GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPD)
                {
                    GPIOx->BCR = (((uint32_t)0x01) << pinpos);
                }
                else
                {
                    if(GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPU)
                    {
                        GPIOx->BSHR = (((uint32_t)0x01) << pinpos);
                    }
                }
            }
        }
        GPIOx->CFGLR = tmpreg;
    }

    if(GPIO_InitStruct->GPIO_Pin > 0x00FF)
    {
        tmpreg = GPIOx->CFGHR;

        for(pinpos = 0x00; pinpos < 0x08; pinpos++)
        {
            pos = (((uint32_t)0x01) << (pinpos + 0x08));
            currentpin = ((GPIO_InitStruct->GPIO_Pin) & pos);

            if(currentpin == pos)
            {
                pos = pinpos << 2;
                pinmask = ((uint32_t)0x0F) << pos;
                tmpreg &= ~pinmask;
                tmpreg |= (currentmode << pos);

                if(GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPD)
                {
                    GPIOx->BCR = (((uint32_t)0x01) << (pinpos + 0x08));
                }

                if(GPIO_InitStruct->GPIO_Mode == GPIO_Mode_IPU)
                {
                    GPIOx->BSHR = (((uint32_t)0x01) << (pinpos + 0x08));
                }
            }
        }
        GPIOx->CFGHR = tmpreg;
    }
}

void GPIO_StructInit(GPIO_InitTypeDef *GPIO_InitStruct)
{
    GPIO_InitStruct->GPIO_Pin = GPIO_Pin_All;
    GPIO_InitStruct->GPIO_Speed = GPIO_Speed_Low;
    GPIO_InitStruct->GPIO_Mode = GPIO_Mode_IN_FLOATING;
}

void GPIO_WriteBit(GPIO_TypeDef *GPIOx, uint16_t GPIO_Pin, BitAction BitVal)
{
    if(BitVal != Bit_RESET)
    {
        GPIOx->BSHR = GPIO_Pin;
    }
    else
    {
        GPIOx->BCR = GPIO_Pin;
    }
}

void GPIO_PinAFConfig(GPIO_TypeDef *GPIOx, uint8_t GPIO_PinSource, uint8_t GPIO_AF)
{
    uint8_t tmp;

    if(GPIO_PinSource >= 0x08)
    {
        tmp = GPIO_PinSource - 0x08;
    }
    else
    {
        tmp = GPIO_PinSource;
    }

    if(GPIOx == GPIOA)
    {
        if(GPIO_PinSource >= 0x08)
        {
            AFIO->GPIOA_AFHR &= ~(0xF << (tmp << 2));
            AFIO->GPIOA_AFHR |= (GPIO_AF << (tmp << 2));
        }
        else
        {
            AFIO->GPIOA_AFLR &= ~(0xF << (tmp << 2));
            AFIO->GPIOA_AFLR |= (GPIO_AF << (tmp << 2));
        }
    }
    else if(GPIOx == GPIOB)
    {
        if(GPIO_PinSource >= 0x08)
        {
            AFIO->GPIOB_AFHR &= ~(0xF << (tmp << 2));
            AFIO->GPIOB_AFHR |= (GPIO_AF << (tmp << 2));
        }
        else
        {
            AFIO->GPIOB_AFLR &= ~(0xF << (tmp << 2));
            AFIO->GPIOB_AFLR |= (GPIO_AF << (tmp << 2));
        }
    }
    else if(GPIOx == GPIOC)
    {
        if(GPIO_PinSource >= 0x08)
        {
            AFIO->GPIOC_AFHR &= ~(0xF << (tmp << 2));
            AFIO->GPIOC_AFHR |= (GPIO_AF << (tmp << 2));
        }
        else
        {
            AFIO->GPIOC_AFLR &= ~(0xF << (tmp << 2));
            AFIO->GPIOC_AFLR |= (GPIO_AF << (tmp << 2));
        }
    }
    else if(GPIOx == GPIOD)
    {
        if(GPIO_PinSource >= 0x08)
        {
            AFIO->GPIOD_AFHR &= ~(0xF << (tmp << 2));
            AFIO->GPIOD_AFHR |= (GPIO_AF << (tmp << 2));
        }
        else
        {
            AFIO->GPIOD_AFLR &= ~(0xF << (tmp << 2));
            AFIO->GPIOD_AFLR |= (GPIO_AF << (tmp << 2));
        }
    }
    else if(GPIOx == GPIOE)
    {
        if(GPIO_PinSource >= 0x08)
        {
            AFIO->GPIOE_AFHR &= ~(0xF << (tmp << 2));
            AFIO->GPIOE_AFHR |= (GPIO_AF << (tmp << 2));
        }
        else
        {
            AFIO->GPIOE_AFLR &= ~(0xF << (tmp << 2));
            AFIO->GPIOE_AFLR |= (GPIO_AF << (tmp << 2));
        }
    }
}
